<resources>
    <string name="app_name">UsedBookExchange</string>
    <string name="main_menu">Main Menu</string>
    <string name="saved_books">Saved Books</string>
    <string name="add_book">Add Book</string>
    <string name="find">Find</string>
    <string name="title_add_book">Add Book</string>
    <string name="general_information">General Information</string>
    <string name="book_name">Book name*</string>
    <string name="book_name_2">Book name</string>
    <string name="book_author">Author*</string>
    <string name="book_author_2">Author</string>
    <string name="book_year_of_printing">Year of printing*</string>
    <string name="book_year_of_printing_2">Year of printing</string>
    <string name="book_genre">Genre*</string>
    <string name="book_genre_2">Genre</string>
    <string name="book_summary">Summary*</string>
    <string name="book_summary_2">Summary</string>
    <string name="specific_information">Specific information</string>
    <string name="book_year_of_buying">Bought in (year)*</string>
    <string name="book_year_of_buying_2">Bought in (year)</string>
    <string name="book_condition">Current condition*</string>
    <string name="book_condition_2">Current condition</string>
    <string name="buying_price">Bought price (MYR)*</string>
    <string name="buying_price_2">Bought price (MYR)</string>
    <string name="book_price">Price (MYR)*</string>
    <string name="book_price_2">Price (MYR)</string>
    <string name="book_number_available">Number available*</string>
    <string name="book_owner">Owner name</string>
    <string name="buy">Buy</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign up</string>
    <string name="displayed_name">Display name*</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="repeat_password">Repeat password*</string>
    <string name="go_to_sign_in">Sign in instead</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="go_to_sign_up">Sign up instead</string>
    <string name="title_activity_find_book">Find Book</string>
    <string name="title_activity_book">Book</string>
    <string name="save">Save and consider later</string>
    <string name="PREFERENCE_FILE_KEY">com.example.usedbookexchange.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_saved_books">Saved Books</string>
    <string name="find_book">Find A Book</string>
    <string name="sign_out">Sign Out</string>
</resources>