<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_book"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/addBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp" />

    <Button
        android:id="@+id/savedBooksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_books"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"/>


    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"/>

</LinearLayout>