<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_information"
            android:textColor="@color/dark_brown"
            android:textSize="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_year_of_printing_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/yearOfPrinting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_genre_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_summary_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:maxLines="10"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specific_information"
            android:textSize="30sp"
            android:textColor="@color/dark_brown"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_price_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buying_price_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/buyingPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_owner"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_year_of_buying_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/yearOfBuying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_condition_2"
            android:textSize="20sp"
            android:textColor="@color/dark_brown"
            style="?android:listSeparatorTextViewStyle"/>

        <TextView
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="10sp"/>

    </LinearLayout>
</ScrollView>